distributed/deployment-code/network/vpc.tf
# Create a VPC
resource "aws_vpc" "ticket_micro_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "ticket-micro-vpc"
  }
}
